# HYDRA-CPP

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  main.yml
